Webkit z-index transition fixes.

--- a/app/assets/stylesheets/gallery.scss
+++ b/app/assets/stylesheets/gallery.scss
@@ -89,3 +89,11 @@
   -ms-transform: rotate(30deg);
   opacity: .7;
 }
+
+.gallery-spinner {
+  width: 50px;
+  height: 50px;
+  background-size: contain;
+  margin: 150px auto;
+  opacity: .5;
+}
